FIX: Text could overflow the error dialog

--- a/src/model/entities/ErrorDialog.module.scss
+++ b/src/model/entities/ErrorDialog.module.scss
@@ -60,4 +60,5 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
 }
 
 .dialogMessageColumn {
+  overflow-x: auto;
 }
